function to show text on screen

--- a/index.html
+++ b/index.html
@@ -13,29 +13,27 @@
       <div class="output-screen"><p class="output">sadsa</p></div>
       <div id="calculator-buttons-container">
         <div id="calculator-number-buttons">
-          <button type="button" class="top-row" class="clear">ac</button>
-          <button type="button" class="top-row" class="percentage-switch">
-            +/-
-          </button>
-          <button type="button" class="top-row" class="percentage">%</button>
-          <button type="button" class="one">1</button>
-          <button type="button" class="two">2</button>
-          <button type="button" class="three">3</button>
-          <button type="button" class="four">4</button>
-          <button type="button" class="five">5</button>
-          <button type="button" class="six">6</button>
-          <button type="button" class="seven">7</button>
-          <button type="button" class="eight">8</button>
-          <button type="button" class="nine">9</button>
-          <button type="button" class="zero">0</button>
-          <button type="button" class="dot">.</button>
+          <button type="button" class="top-row clear">ac</button>
+          <button type="button" class="top-row sign-invert">+/-</button>
+          <button type="button" class="top-row percent">%</button>
+          <button type="button" value="1" class="numbers">1</button>
+          <button type="button" value="2" class="numbers">2</button>
+          <button type="button" value="3" class="numbers">3</button>
+          <button type="button" value="4" class="numbers">4</button>
+          <button type="button" value="5" class="numbers">5</button>
+          <button type="button" value="6" class="numbers">6</button>
+          <button type="button" value="7" class="numbers">7</button>
+          <button type="button" value="8" class="numbers">8</button>
+          <button type="button" value="9" class="numbers">9</button>
+          <button type="button" value="0" class="zero numbers">0</button>
+          <button type="button" value="." class="dot">.</button>
         </div>
         <div id="calculator-operation-buttons">
-          <button type="button" class="divide">&#247;</button>
-          <button type="button" class="multiply">X</button>
-          <button type="button" class="subtract">-</button>
-          <button type="button" class="add">+</button>
-          <button type="button" class="add">=</button>
+          <button type="button" class="operators divide">&#247;</button>
+          <button type="button" class="operators multiply">X</button>
+          <button type="button" class="operators subtract">-</button>
+          <button type="button" class="operators add">+</button>
+          <button type="button" class="operators equals">=</button>
         </div>
       </div>
     </div>
