--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button type="button" class="operators multiply">X</button>
           <button type="button" class="operators subtract">-</button>
           <button type="button" class="operators add">+</button>
-          <button type="button" class="operators equals">=</button>
+          <button type="button" class="equals">=</button>
         </div>
       </div>
     </div>
