--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <button type="button" value="." class="dot">.</button>
         </div>
         <div id="calculator-operation-buttons">
-          <button type="button" class="operators divide">&#247;</button>
-          <button type="button" class="operators multiply">X</button>
-          <button type="button" class="operators subtract">-</button>
-          <button type="button" class="operators add">+</button>
-          <button type="button" class="equals">=</button>
+          <button type="button" value="&#247;" class="operators">&#247;</button>
+          <button type="button" value="x" class="operators">X</button>
+          <button type="button" value="-" class="operators">-</button>
+          <button type="button" value="+" class="operators">+</button>
+          <button type="button" value="=" class="equals">=</button>
         </div>
       </div>
     </div>
