added equal button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button type="button" value="x" class="operators">X</button>
           <button type="button" value="-" class="operators">-</button>
           <button type="button" value="+" class="operators">+</button>
-          <button type="button" value="=" class="operators">=</button>
+          <button type="button" value="=" class="equals">=</button>
         </div>
       </div>
     </div>
