Fixed divison, added catch for 0

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button type="button" value="." class="dot">.</button>
         </div>
         <div id="calculator-operation-buttons">
-          <button type="button" value="&#247;" class="operators">&#247;</button>
+          <button type="button" value="/" class="operators">&#247;</button>
           <button type="button" value="x" class="operators">X</button>
           <button type="button" value="-" class="operators">-</button>
           <button type="button" value="+" class="operators">+</button>
