removed dummy text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="calculator-body">
-      <div class="output-screen"><p class="output">sadsa</p></div>
+      <div class="output-screen"><p class="output"></p></div>
       <div id="calculator-buttons-container">
         <div id="calculator-number-buttons">
           <button type="button" class="top-row clear">ac</button>
