--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="calculator-number-buttons">
           <button type="button" class="top-row clear">ac</button>
           <button type="button" class="top-row sign-invert">+/-</button>
-          <button type="button" class="top-row percent">%</button>
+          <button type="button" class="top-row backspace">&#8592</button>
           <button type="button" value="1" class="numbers">1</button>
           <button type="button" value="2" class="numbers">2</button>
           <button type="button" value="3" class="numbers">3</button>
